src/KendrickParser/KendrickScriptParser.java
package KendrickParser;

// Generated from KendrickScript.g4 by ANTLR 4.7.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class KendrickScriptParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, LETTER=55, DIGIT=56, STRING=57, CLASS_NAME=58, WS=59;
	public static final int
		RULE_kendrickScript = 0, RULE_kendrickEntity = 1, RULE_identifier = 2, 
		RULE_compositeIdentifier = 3, RULE_number = 4, RULE_equation = 5, RULE_equationSignature = 6, 
		RULE_equationExpression = 7, RULE_term = 8, RULE_product = 9, RULE_array = 10, 
		RULE_values = 11, RULE_value = 12, RULE_shortExpression = 13, RULE_basicOperator = 14, 
		RULE_kModelDeclaration = 15, RULE_modelBody = 16, RULE_modelExpression = 17, 
		RULE_attributeDeclaration = 18, RULE_parametersDeclaration = 19, RULE_equationsDeclaration = 20, 
		RULE_equationArray = 21, RULE_transitionsDeclaration = 22, RULE_transitionArray = 23, 
		RULE_transition = 24, RULE_assignmentClause = 25, RULE_compositionDeclaration = 26, 
		RULE_compositionBody = 27, RULE_compositionExpression = 28, RULE_modelClause = 29, 
		RULE_scenarioDeclaration = 30, RULE_scenarioBody = 31, RULE_onClause = 32, 
		RULE_populationClause = 33, RULE_scenarioExpression = 34, RULE_simulationDeclaration = 35, 
		RULE_algorithm = 36, RULE_simulationBody = 37, RULE_simulationScenario = 38, 
		RULE_simulationTime = 39, RULE_visualizationDeclaration = 40, RULE_visualizationModule = 41, 
		RULE_visualizationBody = 42, RULE_forClause = 43, RULE_visualizationExpression = 44, 
		RULE_modelInterfaceDeclaration = 45;
	private static String[] makeRuleNames() {
		return new String[] {
			"kendrickScript", "kendrickEntity", "identifier", "compositeIdentifier", 
			"number", "equation", "equationSignature", "equationExpression", "term", 
			"product", "array", "values", "value", "shortExpression", "basicOperator", 
			"kModelDeclaration", "modelBody", "modelExpression", "attributeDeclaration", 
			"parametersDeclaration", "equationsDeclaration", "equationArray", "transitionsDeclaration", 
			"transitionArray", "transition", "assignmentClause", "compositionDeclaration", 
			"compositionBody", "compositionExpression", "modelClause", "scenarioDeclaration", 
			"scenarioBody", "onClause", "populationClause", "scenarioExpression", 
			"simulationDeclaration", "algorithm", "simulationBody", "simulationScenario", 
			"simulationTime", "visualizationDeclaration", "visualizationModule", 
			"visualizationBody", "forClause", "visualizationExpression", "modelInterfaceDeclaration"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'.'", "'_'", "'='", "':'", "'+'", "'-'", "'*'", "'/'", "'#('", 
			"')'", "' '", "'sum'", "'sqrt'", "'log'", "'size'", "'min'", "'max'", 
			"'avg'", "'sin'", "'cos'", "'KendrickModel'", "';'", "'attribute: #('", 
			"'->'", "'parameters: #('", "'equations: '", "'transitions: '", "'--'", 
			"'-->'", "'Composition'", "'model: ''", "'''", "'Scenario'", "'on: ''", 
			"'';'", "'populationSize: '", "'Simulation'", "'rungeKutta'", "'gillespie'", 
			"'tauleap'", "'scenario: ''", "'from: '", "'to: '", "'step: '", "'Visualization'", 
			"'diagram'", "'map'", "'for: ''", "'legends: '", "'xLabel: '", "'yLabel: '", 
			"'legendTitle: '", "'data: '", "'interface: '"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, "LETTER", "DIGIT", "STRING", 
			"CLASS_NAME", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "KendrickScript.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public KendrickScriptParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class KendrickScriptContext extends ParserRuleContext {
		public List<KendrickEntityContext> kendrickEntity() {
			return getRuleContexts(KendrickEntityContext.class);
		}
		public KendrickEntityContext kendrickEntity(int i) {
			return getRuleContext(KendrickEntityContext.class,i);
		}
		public KendrickScriptContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_kendrickScript; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KendrickScriptListener ) ((KendrickScriptListener)listener).enterKendrickScript(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KendrickScriptListener ) ((KendrickScriptListener)listener).exitKendrickScript(this);
		}
	}

	public final KendrickScriptContext kendrickScript() throws RecognitionException {
		KendrickScriptContext _localctx = new KendrickScriptContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_kendrickScript);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(92);
				kendrickEntity();
				}
				}
				setState(95); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__20) | (1L << T__29) | (1L << T__32) | (1L << T__36) | (1L << T__44))) != 0) );
			setState(97);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class KendrickEntityContext extends ParserRuleContext {
		public KModelDeclarationContext kModelDeclaration() {
			return getRuleContext(KModelDeclarationContext.class,0);
		}
		public CompositionDeclarationContext compositionDeclaration() {
			return getRuleContext(CompositionDeclarationContext.class,0);
		}
		public ScenarioDeclarationContext scenarioDeclaration() {
			return getRuleContext(ScenarioDeclarationContext.class,0);
		}
		public SimulationDeclarationContext simulationDeclaration() {
			return getRuleContext(SimulationDeclarationContext.class,0);
		}
		public VisualizationDeclarationContext visualizationDeclaration() {
			return getRuleContext(VisualizationDeclarationContext.class,0);
		}
		public KendrickEntityContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_kendrickEntity; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KendrickScriptListener ) ((KendrickScriptListener)listener).enterKendrickEntity(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KendrickScriptListener ) ((KendrickScriptListener)listener).exitKendrickEntity(this);
		}
	}

	public final KendrickEntityContext kendrickEntity() throws RecognitionException {
		KendrickEntityContext _localctx = new KendrickEntityContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_kendrickEntity);
		try {
			setState(104);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__20:
				enterOuterAlt(_localctx, 1);
				{
				setState(99);
				kModelDeclaration();
				}
				break;
			case T__29:
				enterOuterAlt(_localctx, 2);
				{
				setState(100);
				compositionDeclaration();
				}
				break;
			case T__32:
				enterOuterAlt(_localctx, 3);
				{
				setState(101);
				scenarioDeclaration();
				}
				break;
			case T__36:
				enterOuterAlt(_localctx, 4);
				{
				setState(102);
				simulationDeclaration();
				}
				break;
			case T__44:
				enterOuterAlt(_localctx, 5);
				{
				setState(103);
				visualizationDeclaration();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IdentifierContext extends ParserRuleContext {
		public List<TerminalNode> LETTER() { return getTokens(KendrickScriptParser.LETTER); }
		public TerminalNode LETTER(int i) {
			return getToken(KendrickScriptParser.LETTER, i);
		}
		public List<TerminalNode> DIGIT() { return getTokens(KendrickScriptParser.DIGIT); }
		public TerminalNode DIGIT(int i) {
			return getToken(KendrickScriptParser.DIGIT, i);
		}
		public IdentifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_identifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KendrickScriptListener ) ((KendrickScriptListener)listener).enterIdentifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KendrickScriptListener ) ((KendrickScriptListener)listener).exitIdentifier(this);
		}
	}

	public final IdentifierContext identifier() throws RecognitionException {
		IdentifierContext _localctx = new IdentifierContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_identifier);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			match(LETTER);
			setState(110);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(107);
					_la = _input.LA(1);
					if ( !(_la==LETTER || _la==DIGIT) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
					} 
				}
				setState(112);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CompositeIdentifierContext extends ParserRuleContext {
		public List<IdentifierContext> identifier() {
			return getRuleContexts(IdentifierContext.class);
		}
		public IdentifierContext identifier(int i) {
			return getRuleContext(IdentifierContext.class,i);
		}
		public CompositeIdentifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compositeIdentifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KendrickScriptListener ) ((KendrickScriptListener)listener).enterCompositeIdentifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KendrickScriptListener ) ((KendrickScriptListener)listener).exitCompositeIdentifier(this);
		}
	}

	public final CompositeIdentifierContext compositeIdentifier() throws RecognitionException {
		CompositeIdentifierContext _localctx = new CompositeIdentifierContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_compositeIdentifier);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			identifier();
			setState(114);
			match(T__1);
			setState(115);
			identifier();
			setState(120);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__1) {
				{
				{
				setState(116);
				match(T__1);
				setState(117);
				identifier();
				}
				}
				setState(122);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NumberContext extends ParserRuleContext {
		public List<TerminalNode> DIGIT() { return getTokens(KendrickScriptParser.DIGIT); }
		public TerminalNode DIGIT(int i) {
			return getToken(KendrickScriptParser.DIGIT, i);
		}
		public NumberContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_number; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KendrickScriptListener ) ((KendrickScriptListener)listener).enterNumber(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KendrickScriptListener ) ((KendrickScriptListener)listener).exitNumber(this);
		}
	}

	public final NumberContext number() throws RecognitionException {
		NumberContext _localctx = new NumberContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_number);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(124); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(123);
				match(DIGIT);
				}
				}
				setState(126); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==DIGIT );
			setState(134);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				{
				setState(128);
				match(T__0);
				setState(130); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(129);
					match(DIGIT);
					}
					}
					setState(132); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==DIGIT );
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EquationContext extends ParserRuleContext {
		public EquationSignatureContext equationSignature() {
			return getRuleContext(EquationSignatureContext.class,0);
		}
		public EquationExpressionContext equationExpression() {
			return getRuleContext(EquationExpressionContext.class,0);
		}
		public EquationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_equation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KendrickScriptListener ) ((KendrickScriptListener)listener).enterEquation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KendrickScriptListener ) ((KendrickScriptListener)listener).exitEquation(this);
		}
	}

	public final EquationContext equation() throws RecognitionException {
		EquationContext _localctx = new EquationContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_equation);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			equationSignature();
			setState(137);
			match(T__2);
			setState(138);
			equationExpression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EquationSignatureContext extends ParserRuleContext {
		public List<IdentifierContext> identifier() {
			return getRuleContexts(IdentifierContext.class);
		}
		public IdentifierContext identifier(int i) {
			return getRuleContext(IdentifierContext.class,i);
		}
		public EquationSignatureContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_equationSignature; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KendrickScriptListener ) ((KendrickScriptListener)listener).enterEquationSignature(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KendrickScriptListener ) ((KendrickScriptListener)listener).exitEquationSignature(this);
		}
	}

	public final EquationSignatureContext equationSignature() throws RecognitionException {
		EquationSignatureContext _localctx = new EquationSignatureContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_equationSignature);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(140);
			identifier();
			setState(141);
			match(T__3);
			setState(142);
			identifier();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EquationExpressionContext extends ParserRuleContext {
		public TermContext term() {
			return getRuleContext(TermContext.class,0);
		}
		public EquationExpressionContext equationExpression() {
			return getRuleContext(EquationExpressionContext.class,0);
		}
		public EquationExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_equationExpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KendrickScriptListener ) ((KendrickScriptListener)listener).enterEquationExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KendrickScriptListener ) ((KendrickScriptListener)listener).exitEquationExpression(this);
		}
	}

	public final EquationExpressionContext equationExpression() throws RecognitionException {
		EquationExpressionContext _localctx = new EquationExpressionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_equationExpression);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(144);
			term();
			setState(147);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__4 || _la==T__5) {
				{
				setState(145);
				_la = _input.LA(1);
				if ( !(_la==T__4 || _la==T__5) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(146);
				equationExpression();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TermContext extends ParserRuleContext {
		public NumberContext number() {
			return getRuleContext(NumberContext.class,0);
		}
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public CompositeIdentifierContext compositeIdentifier() {
			return getRuleContext(CompositeIdentifierContext.class,0);
		}
		public ProductContext product() {
			return getRuleContext(ProductContext.class,0);
		}
		public TermContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_term; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KendrickScriptListener ) ((KendrickScriptListener)listener).enterTerm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KendrickScriptListener ) ((KendrickScriptListener)listener).exitTerm(this);
		}
	}

	public final TermContext term() throws RecognitionException {
		TermContext _localctx = new TermContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_term);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(156);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				{
				setState(150);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__5) {
					{
					setState(149);
					match(T__5);
					}
				}

				setState(152);
				number();
				}
				break;
			case 2:
				{
				setState(153);
				identifier();
				}
				break;
			case 3:
				{
				setState(154);
				compositeIdentifier();
				}
				break;
			case 4:
				{
				setState(155);
				product();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProductContext extends ParserRuleContext {
		public TermContext term() {
			return getRuleContext(TermContext.class,0);
		}
		public ProductContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_product; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KendrickScriptListener ) ((KendrickScriptListener)listener).enterProduct(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KendrickScriptListener ) ((KendrickScriptListener)listener).exitProduct(this);
		}
	}

	public final ProductContext product() throws RecognitionException {
		ProductContext _localctx = new ProductContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_product);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(158);
			_la = _input.LA(1);
			if ( !(_la==T__6 || _la==T__7) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(159);
			term();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArrayContext extends ParserRuleContext {
		public ValuesContext values() {
			return getRuleContext(ValuesContext.class,0);
		}
		public ShortExpressionContext shortExpression() {
			return getRuleContext(ShortExpressionContext.class,0);
		}
		public ArrayContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_array; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KendrickScriptListener ) ((KendrickScriptListener)listener).enterArray(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KendrickScriptListener ) ((KendrickScriptListener)listener).exitArray(this);
		}
	}

	public final ArrayContext array() throws RecognitionException {
		ArrayContext _localctx = new ArrayContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_array);
		try {
			setState(166);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__8:
				enterOuterAlt(_localctx, 1);
				{
				setState(161);
				match(T__8);
				setState(162);
				values();
				}
				break;
			case T__5:
			case T__6:
			case T__7:
			case LETTER:
			case DIGIT:
				enterOuterAlt(_localctx, 2);
				{
				setState(163);
				shortExpression();
				setState(164);
				match(T__9);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ValuesContext extends ParserRuleContext {
		public List<ValueContext> value() {
			return getRuleContexts(ValueContext.class);
		}
		public ValueContext value(int i) {
			return getRuleContext(ValueContext.class,i);
		}
		public ValuesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_values; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KendrickScriptListener ) ((KendrickScriptListener)listener).enterValues(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KendrickScriptListener ) ((KendrickScriptListener)listener).exitValues(this);
		}
	}

	public final ValuesContext values() throws RecognitionException {
		ValuesContext _localctx = new ValuesContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_values);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(168);
			value();
			setState(173);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(169);
					match(T__10);
					setState(170);
					value();
					}
					} 
				}
				setState(175);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ValueContext extends ParserRuleContext {
		public NumberContext number() {
			return getRuleContext(NumberContext.class,0);
		}
		public TerminalNode STRING() { return getToken(KendrickScriptParser.STRING, 0); }
		public ArrayContext array() {
			return getRuleContext(ArrayContext.class,0);
		}
		public ValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_value; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KendrickScriptListener ) ((KendrickScriptListener)listener).enterValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KendrickScriptListener ) ((KendrickScriptListener)listener).exitValue(this);
		}
	}

	public final ValueContext value() throws RecognitionException {
		ValueContext _localctx = new ValueContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_value);
		try {
			setState(179);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(176);
				number();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(177);
				match(STRING);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(178);
				array();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ShortExpressionContext extends ParserRuleContext {
		public EquationExpressionContext equationExpression() {
			return getRuleContext(EquationExpressionContext.class,0);
		}
		public List<BasicOperatorContext> basicOperator() {
			return getRuleContexts(BasicOperatorContext.class);
		}
		public BasicOperatorContext basicOperator(int i) {
			return getRuleContext(BasicOperatorContext.class,i);
		}
		public ShortExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_shortExpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KendrickScriptListener ) ((KendrickScriptListener)listener).enterShortExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KendrickScriptListener ) ((KendrickScriptListener)listener).exitShortExpression(this);
		}
	}
